--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Spice&display=swap');
+
+:root {
+    --primary: #191716; /* dominant color */
+    --secondary: #DCE5E4; /* texture color */
+    --accent: #88498F; /* accent color */
+}
+
 body {
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: black;
     color:white;
+    font-family: 'Bebas Neue';
 }
 
 .typewriter h1 {
     padding: 10px;
     overflow: hidden;/* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
+    border-right: .15em solid var(--accent); /* The typwriter cursor */
     white-space: nowrap;/* Keeps the content on a single line */
     margin: 0 auto;/* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em;/* Adjusts the spacing between letters */
@@ -37,7 +46,49 @@ body {
     }
 
     50% {
-        border-color: orange;
+        border-color: var(--accent);
+    }
+}
+
+div{
+    margin: 20px;
+}
+
+.animate1 {
+    padding: 5px;
+    border: 2px white solid;
+    transition: padding 1s;
+}
+
+.animate1:hover {
+    padding: 50px;
+}
+
+.animate2 {
+    padding: 10px;
+    background-color: pink;
+    animation: bColor 10s infinite;
+    cursor:pointer;
+    font-family: 'Bungee Spice';
+}
+
+
+
+@keyframes bColor {
+    0% {
+        background-color: pink;
+    }
+    25% {
+        background-color: orange;
+    }
+    50% {
+        background-color: purple;
+    }
+    75%{
+        background-color:white;
+    }
+    100% {
+        background-color: green;
     }
 }
 
@@ -104,4 +155,26 @@ input:checked+.slider:before {
 /* Rounded slider */
 .slider.round:before {
     border-radius: 50%;
+}
+
+.footer{
+    margin: 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--primary);
+    color: white;
+    text-align: center;
+    font-size: larger;
+}
+
+.lightMode{
+    background-color: var(--secondary);
+    color:var(--primary);
+}
+
+a{
+    color: var(--accent);
+    text-decoration: none;
 }
